name:                fs2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/fs2#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs: src
                , .
  exposed-modules: Foundation
                   Dispatch
                   Handler.Home
  build-depends:   base >= 4.7 && < 5
                ,  yesod
                ,  data-default
                ,  text
                ,  stm 

executable fs2
  hs-source-dirs:      src
                  ,    .
  other-modules:       Foundation
                       Dispatch
                       Handler.Home
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                    ,  yesod
                    ,  data-default
                    ,  text
                    ,  stm 
